Added missing files.

--- a/Artivity.Apid.Modules.Journal/Artivity.Apid.Modules.Journal.csproj
+++ b/Artivity.Apid.Modules.Journal/Artivity.Apid.Modules.Journal.csproj
@@ -193,6 +193,8 @@
     <EmbeddedResource Include="app\bower_components\angular-bootstrap\ui-bootstrap-tpls.js" />
     <EmbeddedResource Include="app\bower_components\angular-bootstrap\ui-bootstrap-tpls.min.js" />
     <EmbeddedResource Include="app\bower_components\angular-animate\angular-animate.min.js" />
+    <EmbeddedResource Include="app\bower_components\angular-hotkeys\build\hotkeys.min.js" />
+    <EmbeddedResource Include="app\bower_components\angular-hotkeys\build\hotkeys.min.css" />
     <Content Include="app\bower_components\angular-moment\.gitignore" />
     <EmbeddedResource Include="app\bower_components\angular-moment\angular-moment.js" />
     <EmbeddedResource Include="app\bower_components\angular-moment\angular-moment.min.js" />
