--- a/Artivity.Apid.Modules.Journal/app/package.json
+++ b/Artivity.Apid.Modules.Journal/app/package.json
@@ -9,10 +9,11 @@
   "author": "Semiodesk GmbH",
   "license": "GPL-2.0",
   "dependencies": {
-    "electron-prebuilt": "^1.3.9",
+    "electron": "^1.4.7",
     "file-url": "^2.0.0"
   },
   "devDependencies": {
+    "bower": "^1.8.0",
     "grunt": "^1.0.1",
     "grunt-wiredep": "^3.0.1"
   }
