Implemented 'Backup profile' button in user profile settings.

--- a/Artivity.Apid/Artivity.Apid.csproj
+++ b/Artivity.Apid/Artivity.Apid.csproj
@@ -117,7 +117,9 @@
     <Compile Include="Helpers\TaskProgressInfoList.cs" />
     <Compile Include="Helpers\ProgressStream.cs" />
     <Compile Include="Helpers\ProgressStreamContent.cs" />
+    <Compile Include="Helpers\ZipArchiveExtensions.cs" />
     <Compile Include="IO\ArchiveManifestCreator.cs" />
+    <Compile Include="IO\BackupWriter.cs" />
     <Compile Include="Protocols\Atom\AtomLink.cs" />
     <Compile Include="Services\Clients\EPrintsServiceClient.cs" />
     <Compile Include="Protocols\Authentication\BasicAuthenticationClient.cs" />
