--- a/Artivity.Apid.Modules.Journal/app/package.json
+++ b/Artivity.Apid.Modules.Journal/app/package.json
@@ -14,7 +14,10 @@
   },
   "devDependencies": {
     "bower": "^1.8.0",
+    "electron-packager": "^8.3.0",
     "grunt": "^1.0.1",
+    "grunt-electron": "^5.0.0",
+    "grunt-sass": "^1.2.1",
     "grunt-wiredep": "^3.0.1"
   }
 }
