--- a/Artivity.Apid.Modules.Journal/app/package.json
+++ b/Artivity.Apid.Modules.Journal/app/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "artivity-journal",
+  "name": "artivity",
   "version": "1.0.0",
-  "description": "",
+  "description": "Artivity is a tool to track the creative process.",
   "main": "main.js",
   "scripts": {
     "start": "electron main.js"
   },
   "author": "Semiodesk GmbH",
-  "license": "GPL-2.0",
+  "license": "GPL-3.0",
   "dependencies": {
     "electron": "^1.4.7",
     "file-url": "^2.0.0"
@@ -16,7 +16,11 @@
     "bower": "^1.8.0",
     "electron-packager": "^8.3.0",
     "grunt": "^1.0.1",
+    "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-copy": "^1.0.0",
     "grunt-electron": "^5.0.0",
+    "grunt-electron-installer": "^2.1.0",
+    "grunt-msbuild": "^0.3.7",
     "grunt-sass": "^1.2.1",
     "grunt-wiredep": "^3.0.1"
   }
