--- a/Artivity.Apid.Modules.Journal/app/package.json
+++ b/Artivity.Apid.Modules.Journal/app/package.json
@@ -10,12 +10,14 @@
   "license": "GPL-3.0",
   "dependencies": {
     "electron": "^1.4.7",
-    "file-url": "^2.0.0"
+    "file-url": "^2.0.0",
+    "node-feedparser": "^1.0.1"
   },
   "devDependencies": {
     "bower": "^1.8.0",
     "electron-packager": "^8.3.0",
     "grunt": "^1.0.1",
+    "grunt-comment-toggler": "^0.2.2",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-electron": "^5.0.0",
