--- a/Artivity.Apid.Modules.Journal/app/package.json
+++ b/Artivity.Apid.Modules.Journal/app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "artivity",
-  "version": "1.0.0",
+  "version": "1.6.99",
   "description": "Artivity is a tool to track the creative process.",
   "main": "main.js",
   "scripts": {
@@ -11,7 +11,8 @@
   "dependencies": {
     "electron": "^1.4.7",
     "file-url": "^2.0.0",
-    "node-feedparser": "^1.0.1"
+    "node-feedparser": "^1.0.1",
+    "semver": "^5.3.0"
   },
   "devDependencies": {
     "bower": "^1.8.0",
