--- a/Artivity.Apid.Modules.Journal/app/bower.json
+++ b/Artivity.Apid.Modules.Journal/app/bower.json
@@ -19,9 +19,9 @@
     "jquery": "^2.2.0",
     "jquery-ui": "^1.12.1",
     "jquery-editable-select": "^2.0.0",
-    "angular": "^1.5.8",
-    "angular-animate": "^1.5.8",
-    "angular-route": "^1.5.7",
+    "angular": "1.5.8",
+    "angular-animate": "1.5.8",
+    "angular-route": "1.5.8",
     "angular-ui": "^0.4.0",
     "angular-bootstrap": "^2.1.3",
     "angular-input-modified": "^2.3.3",
@@ -43,7 +43,7 @@
     "angular-translate": "^2.13.0"
   },
   "resolutions": {
-    "angular": "^1.5.8",
+    "angular": "1.5.8",
     "moment": "^2.10.0"
   },
   "overrides": {
