--- a/Artivity.Apid.Modules.Journal/app/package.json
+++ b/Artivity.Apid.Modules.Journal/app/package.json
@@ -16,12 +16,14 @@
     "bower": "^1.8.0",
     "electron-packager": "^8.3.0",
     "grunt": "^1.0.1",
-    "grunt-contrib-watch": "^1.0.0",
+    "grunt-concurrent": "^2.3.1",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-watch": "^1.0.0",
     "grunt-electron": "^5.0.0",
     "grunt-msbuild": "^0.3.7",
     "grunt-sass": "^1.2.1",
-    "grunt-wiredep": "^3.0.1"
+    "grunt-wiredep": "^3.0.1",
+    "livereload": "^0.6.0"
   }
 }
