--- a/Artivity.Apid.Modules.Journal/app/package.json
+++ b/Artivity.Apid.Modules.Journal/app/package.json
@@ -18,6 +18,7 @@
     "grunt": "^1.0.1",
     "grunt-concurrent": "^2.3.1",
     "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-electron": "^5.0.0",
