--- a/Artivity.Apid.Modules.Journal/app/package.json
+++ b/Artivity.Apid.Modules.Journal/app/package.json
@@ -24,6 +24,7 @@
     "grunt-electron": "^5.0.0",
     "grunt-msbuild": "^0.3.7",
     "grunt-sass": "^1.2.1",
+    "grunt-script-link-tags": "^1.0.2",
     "grunt-wiredep": "^3.0.1",
     "livereload": "^0.6.0"
   }
