--- a/Artivity.Apid/Artivity.Apid.csproj
+++ b/Artivity.Apid/Artivity.Apid.csproj
@@ -119,6 +119,7 @@
     <Compile Include="Helpers\ProgressStreamContent.cs" />
     <Compile Include="IO\ArchiveManifestCreator.cs" />
     <Compile Include="IO\BackupWriter.cs" />
+    <Compile Include="Plugins\PluginManifestRegistryInfo.cs" />
     <Compile Include="Protocols\Atom\AtomLink.cs" />
     <Compile Include="Services\Clients\EPrintsServiceClient.cs" />
     <Compile Include="Protocols\Authentication\BasicAuthenticationClient.cs" />
@@ -213,6 +214,7 @@
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
+    <None Include="Plugins\Plugins.cd" />
     <None Include="TinyVirtuoso\database\virtuoso.ini">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
