Configured libartivity windows build to behave correctly. Windows log config only prints warnings and errors. Changed electron temp file path to 'userData'/app

--- a/Artivity.Apid.Windows/log.config
+++ b/Artivity.Apid.Windows/log.config
@@ -7,7 +7,7 @@
     </layout>
   </appender>
   <root>
-    <level value="All" />
+    <level value="WARN" />
     <appender-ref ref="EventLogAppender" />
   </root>
 </log4net>
