--- a/Artivity.Apid.Modules.Journal/app/package.json
+++ b/Artivity.Apid.Modules.Journal/app/package.json
@@ -12,6 +12,7 @@
     "electron": "^1.4.7",
     "file-url": "^2.0.0",
     "node-feedparser": "^1.0.1",
+    "request": "^2.79.0",
     "semver": "^5.3.0"
   },
   "devDependencies": {
