--- a/Artivity.DataModel/app.config
+++ b/Artivity.DataModel/app.config
@@ -56,6 +56,10 @@
       <Ontology Uri="http://purl.org/dc/elements/1.1/" Prefix="dces">
         <FileSource Location="Ontologies/dcelements.ttl" />
       </Ontology>
+
+      <Ontology Uri="http://rdfs.org/sioc/ns#" Prefix="sioc">
+        <FileSource Location="Ontologies/sioc.rdf" />
+      </Ontology>
     </OntologySettings>
 
     <VirtuosoStoreSettings>
