--- a/Artivity.API/Artivity.API.csproj
+++ b/Artivity.API/Artivity.API.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{E5D40AD8-4CDC-421A-9B71-1B4959D09671}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Artivity.API</RootNamespace>
-    <AssemblyName>Artivity.API</AssemblyName>
+    <RootNamespace>Artivity.Api</RootNamespace>
+    <AssemblyName>Artivity.Api</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -74,15 +74,20 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Archive\ArchiveManifest.cs" />
-    <Compile Include="Archive\ArchiveManifestCreator.cs" />
-    <Compile Include="Archive\ArchiveReader.cs" />
-    <Compile Include="Archive\ArchiveWriter.cs" />
-    <Compile Include="Infrastructure\EntityBase.cs" />
-    <Compile Include="Infrastructure\FileNameEncoder.cs" />
+    <Compile Include="Infrastructure\IThumbnailProvider.cs" />
+    <Compile Include="IO\ArchiveManifest.cs" />
+    <Compile Include="IO\ArchiveManifestCreator.cs" />
+    <Compile Include="IO\ArchiveReader.cs" />
+    <Compile Include="IO\ArchiveWriter.cs" />
+    <Compile Include="IO\BackupWriter.cs" />
+    <Compile Include="IO\JsonNetBodyDeserializer.cs" />
+    <Compile Include="IO\JsonNetSerializer.cs" />
+    <Compile Include="IO\NancyHelpers.cs" />
+    <Compile Include="Modules\EntityModuleBase.cs" />
+    <Compile Include="IO\FileNameEncoder.cs" />
     <Compile Include="Infrastructure\IPlatformProvider.cs" />
     <Compile Include="Infrastructure\ILogger.cs" />
-    <Compile Include="Infrastructure\ModuleBase.cs" />
+    <Compile Include="Modules\ModuleBase.cs" />
     <Compile Include="Infrastructure\NancyExtensions.cs" />
     <Compile Include="Infrastructure\UserConfig.cs" />
     <Compile Include="Modules\ActivitiesModule.cs" />
@@ -109,7 +114,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Infrastructure\JsonSerializerSettings.cs" />
+    <Compile Include="IO\JsonSerializerSettings.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
