--- a/Apid/Apid.csproj
+++ b/Apid/Apid.csproj
@@ -114,6 +114,7 @@
     <Compile Include="Helpers\ProgressStream.cs" />
     <Compile Include="Helpers\ProgressStreamContent.cs" />
     <Compile Include="Plugins\PluginManifestRegistryInfo.cs" />
+    <Compile Include="Plugins\ProgramInstallationWatchdogFactory.cs" />
     <Compile Include="Protocols\Atom\AtomLink.cs" />
     <Compile Include="Services\Clients\EPrintsServiceClient.cs" />
     <Compile Include="Protocols\Authentication\BasicAuthenticationClient.cs" />
@@ -134,10 +135,9 @@
     <Compile Include="IO\FileSystemWatcherInfo.cs" />
     <Compile Include="Modules\AccountsModule.cs" />
     <Compile Include="Modules\AgentsModule.cs" />
-    <Compile Include="Platforms\OSX\ThumbnailProvider.cs" />
-    <Compile Include="Platforms\ThumbnailProviderFactory.cs" />
-    <Compile Include="Platforms\Win\ThumbnailProvider.cs" />
-    <Compile Include="Platforms\PlatformProvider.cs" />
+    <Compile Include="Platform\OSX\ThumbnailProvider.cs" />
+    <Compile Include="Platform\ThumbnailProviderFactory.cs" />
+    <Compile Include="Platform\PlatformProvider.cs" />
     <Compile Include="Plugins\PluginCheckerFactory.cs" />
     <Compile Include="Plugins\PluginManifestPluginFile.cs" />
     <Compile Include="Plugins\PluginManifestReader.cs" />
@@ -150,19 +150,14 @@
     <Compile Include="Options.cs" />
     <Compile Include="Modules\UriModule.cs" />
     <Compile Include="IO\FileInfoCache.cs" />
-    <Compile Include="Platforms\OSX\CoreFoundation.cs" />
+    <Compile Include="Platform\OSX\CoreFoundation.cs" />
     <Compile Include="Plugins\PluginChecker.cs" />
     <Compile Include="Plugins\PluginManifest.cs" />
-    <Compile Include="Platforms\Win\ProgramInstallationWatchdog.cs" />
-    <Compile Include="Platforms\Win\InstalledPrograms.cs" />
-    <Compile Include="Platforms\Win\RegistryEntry.cs" />
-    <Compile Include="Platforms\Win\RegistryMonitor.cs" />
     <Compile Include="Plugins\IProgramInstallationWatchdog.cs" />
-    <Compile Include="Platforms\OSX\Carbon.cs" />
-    <Compile Include="Platforms\OSX\InstalledPrograms.cs" />
-    <Compile Include="Platforms\OSX\OsxPluginChecker.cs" />
-    <Compile Include="Platforms\Win\WinPluginChecker.cs" />
-    <Compile Include="Platforms\OSX\ProgramInstallationWatchdog.cs" />
+    <Compile Include="Platform\OSX\Carbon.cs" />
+    <Compile Include="Platform\OSX\InstalledPrograms.cs" />
+    <Compile Include="Platform\OSX\OsxPluginChecker.cs" />
+    <Compile Include="Platform\OSX\ProgramInstallationWatchdog.cs" />
     <Compile Include="Protocols\Atom\AtomCategory.cs" />
     <Compile Include="Protocols\Atom\AtomCollection.cs" />
     <Compile Include="Protocols\Atom\AtomFeed.cs" />
