--- a/Apid.Windows/Apid.Windows.csproj
+++ b/Apid.Windows/Apid.Windows.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{3CAF4068-5CE1-43B2-BE19-4425B0A86DB8}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Artivity.WinService</RootNamespace>
-    <AssemblyName>Artivity.WinService</AssemblyName>
+    <RootNamespace>Artivity.Apid.Windows</RootNamespace>
+    <AssemblyName>Artivity.Apid.Windows</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <ReleaseVersion>1.6</ReleaseVersion>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
@@ -35,7 +35,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>Artivity.WinService.Program</StartupObject>
+    <StartupObject>Artivity.Apid.Windows.Program</StartupObject>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug OSX|AnyCPU' ">
     <Optimize>false</Optimize>
@@ -74,6 +74,12 @@
     <Compile Include="ArtivityService.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Platform\InstalledPrograms.cs" />
+    <Compile Include="Platform\ProgramInstallationWatchdog.cs" />
+    <Compile Include="Platform\RegistryEntry.cs" />
+    <Compile Include="Platform\RegistryMonitor.cs" />
+    <Compile Include="Platform\ThumbnailProvider.cs" />
+    <Compile Include="Platform\PluginChecker.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Win32.cs" />
@@ -89,6 +95,10 @@
     <ProjectReference Include="..\Api\Api.csproj">
       <Project>{e5d40ad8-4cdc-421a-9b71-1b4959d09671}</Project>
       <Name>Api</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DataModel\DataModel.csproj">
+      <Project>{af97fb55-09c8-4775-81f6-f1f97c2db468}</Project>
+      <Name>DataModel</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
